--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
 </body>
 <script src="task01.js"></script>
 <script src="hard_task_02.js"></script>
+<script src="hard_task_01.js"></script>
+<script src="task02.js"></script>
+<script src="task03.js"></script>
+<script src="task04.js"></script>
 </html>
